# tcui

./: Cargo.toml  README.md  build-windows.sh  tc-requests.rest
.devcontainer/: Dockerfile  devcontainer.json
src/: git.rs  main.rs  teamcity.rs
