[package]
name = "tcui"
version = "0.1.0"
authors = ["Mark Jordan <mark.jordan@red-gate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ui dependencies
crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
failure = "0.1.6"
# http dependencies
reqwest = { version = "0.10.3", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.104"